--- a/front/pages/game/online-time.html
+++ b/front/pages/game/online-time.html
@@ -16,6 +16,9 @@
           <div id="zoneSelect"></div>
         </div>
         <div class="layui-input-inline">
+          <input class="layui-input" placeholder="选择日期" autocomplete="off" id="date" name="date">
+        </div>
+        <div class="layui-input-inline">
           <button class="layui-btn" lay-submit lay-filter="search">
             <i class="layui-icon layui-icon-refresh-3"></i>
           </button>
@@ -29,14 +32,17 @@
 <script type="text/javascript" src="/lib/xm-select/xm-select.js"></script>
 <script>
   var zoneid;
-  layui.use(["table", "okUtils", "form", "okLayer"], function () {
+  layui.use(["table", "okUtils", "form", "okLayer", "laydate"], function () {
     let table = layui.table;
     let okUtils = layui.okUtils;
     let form = layui.form;
     let okLayer = layui.okLayer;
     let xmSelect = layui.xmSelect;
     let $ = layui.jquery;
+    let laydate = layui.laydate
     okLoading.close();
+
+    laydate.render({ elem: "#date", type: "date" });
 
     let zoneSelect = xmSelect.render({
       el: '#zoneSelect',
