--- a/front/pages/gm/activity.html
+++ b/front/pages/gm/activity.html
@@ -37,7 +37,7 @@
           { field: "id", title: "活动ID", width: 90, fixed: 'left' },
           { field: "apply_zone", title: "应用分区", width: 90, fixed: 'left' },
           { field: "apply_user", title: "应用账户", width: 90 },
-          { field: "configure_data", title: "活动类型", width: 90, align: "center" },
+          { field: "activity_type", title: "活动类型", width: 90, align: "center" },
           { field: "configure_desc", title: "活动备注" },
           {
             field: "iBeginTime", title: "开始时间", align: "center", templet: function (d) {
@@ -49,12 +49,12 @@
               return okUtils.dateFormat(new Date(d.iEndTime * 1000), 'yyyy-MM-dd hh:mm:ss');
             }
           },
-          { field: "sConfigData", title: "配置数据", align: "center" },
+          { field: "configure_data", title: "配置数据", align: "center" },
           { title: "操作", width: 80, align: "center", templet: "#operationTpl", width: 70, fixed: 'right' }
         ]],
         parseData: function (res) {
           for (i = 0; i < res.data.length; ++i) {
-            res.data[i].id = res.data[i].iActivityId;
+            res.data[i].id = res.data[i].activity_id;
           }
           return res;
         }
