--- a/front/pages/game/role.html
+++ b/front/pages/game/role.html
@@ -31,6 +31,9 @@
 <script src="/lib/layui/layui.js"></script>
 <script type="text/javascript" src="/lib/xm-select/xm-select.js"></script>
 <script>
+layui.config({
+            base: "../../lib/opTable/"
+            });
   var zoneid;
   var roleid;
   layui.use(["table", "okUtils", "form", "okLayer", "opTable"], function () {
