--- a/front/pages/game/role.html
+++ b/front/pages/game/role.html
@@ -31,14 +31,10 @@
 <script src="/lib/layui/layui.js"></script>
 <script type="text/javascript" src="/lib/xm-select/xm-select.js"></script>
 <script>
-  layui.config({
-    base: "../../lib/opTable/"
-  });
   var zoneid;
   var roleid;
-  layui.use(["table", "okUtils", "form", "okLayer", "opTable"], function () {
+  layui.use(["table", "okUtils", "form", "okLayer"], function () {
     let table = layui.table;
-    let opTable = layui.opTable;
     let okUtils = layui.okUtils;
     let form = layui.form;
     let okLayer = layui.okLayer;
@@ -78,7 +74,7 @@
       console.log(error);
     });
 
-    let roleTable = opTable.render({
+    let roleTable = table.render({
       elem: "#tableId",
       url: "/api/game/role/list",
       where: {zoneid: 1},
@@ -95,28 +91,6 @@
         {field: "reg_time", title: "注册时间"},
         {title: "操作", width: 200, align: "center", templet: "#operationTpl", fixed: 'right'}
       ]],
-      openCols: [
-        {field: "coin", title: "金币数"},
-        {field: "diamond", title: "钻石数"},
-        {field: "heroList", title: "拥有英雄"},
-        {field: "itemList", title: "拥有道具"},
-      ],
-      openTable: function(itemData) {
-        return {
-          elem: "#child" + itemData.LAY_INDEX,
-          id: "child" + itemData.LAY_INDEX,
-          cols: [[
-            {field: 'id', title: "拉可适当"}
-          ]],
-          openTable: function(item) {
-            return {
-              cols: [[
-                {field: 'id2', title: "hello"}
-              ]]
-            }
-          }
-        }
-      },
       toolbar: true,
       defaultToolbar: ['filter', 'print', 'exports'],
       autoSort: false,
