--- a/front/pages/stat/remain2.html
+++ b/front/pages/stat/remain2.html
@@ -24,8 +24,9 @@
           </button>
         </div>
       </div>
+	    <table id="tableId" lay-filter="tableFilter"></table>
+    </div>
   </form>
-	<table id="tableId" lay-filter="tableFilter"></table>
 </div>
 <!--js逻辑-->
 <script src="/lib/layui/layui.js"></script>
