--- a/front/pages/gm/activity.html
+++ b/front/pages/gm/activity.html
@@ -87,13 +87,15 @@
           { field: "activity_type", title: "活动类型", width: 90, align: "center" },
           { field: "configure_desc", title: "活动备注" },
           {
-            field: "iBeginTime", title: "开始时间", align: "center", templet: function (d) {
-              return okUtils.dateFormat(new Date(d.iEndTime * 1000), 'yyyy-MM-dd hh:mm:ss');
+            title: "开始时间", align: "center", templet: function (d) {
+              let json = JSON.parse(d.configure_data);
+              return json.constrain.begin_time != undefined ? json.constrain.begin_time : "";
             }
           },
           {
-            field: "iEndTime", title: "结束时间", align: "center", templet: function (d) {
-              return okUtils.dateFormat(new Date(d.iEndTime * 1000), 'yyyy-MM-dd hh:mm:ss');
+            title: "结束时间", align: "center", templet: function (d) {
+              let json = JSON.parse(d.configure_data);
+              return json.constrain.end_time != undefined ? json.constrain.end_time : "";
             }
           },
           { field: "configure_data", title: "配置数据", align: "center" },
