--- a/front/pages/game/role_detail.html
+++ b/front/pages/game/role_detail.html
@@ -10,8 +10,16 @@
 </head>
 
 <body>
-  <div id="roleDetail">
-    <!--js逻辑-->
+  <div class="layui-tab" lay-allowClose="true">
+    <ul class="layui-tab-title">
+      <li class="layui-this">基础信息</li>
+      <li>英雄列表</li>
+    </ul>
+    <div class="layui-tab-content">
+      <div class="layui-tab-item layui-show">金币</div>
+      <div class="layui-tab-item">钻石</div>
+    </div>
+    <!--
     <script src="/lib/layui/layui.js"></script>
     <script>
       layui.use(["tree"], function () {
@@ -42,6 +50,7 @@
         })
       })
     </script>
+    -->
   </div>
 </body>
 
