--- a/front/pages/game/role_detail.html
+++ b/front/pages/game/role_detail.html
@@ -12,14 +12,14 @@
 <body>
   <div class="layui-tab layui-tab-brief" lay-allowClose="true">
     <ul class="layui-tab-title">
-      <li>英雄列表</li>
-      <li class="layui-this">基础信息</li>
+      <li class="layui-this">英雄列表</li>
+      <li>基础信息</li>
     </ul>
     <div class="layui-tab-content">
-      <div class="layui-tab-item layui-show">金币</div>
-      <div class="layui-tab-item">
+      <div class="layui-tab-item layui-show">
         <table id="heroTable" lay-filter="hero_table"></table>
       </div>
+      <div class="layui-tab-item">金币</div>
     </div>
     <script src="/lib/layui/layui.js"></script>
     <script>
@@ -29,9 +29,10 @@
         let $ = layui.jquery;
         okLoading.close();
 
-        let roleTable = table.render({
+        let heroTable = table.render({
           elem: "#heroTable",
-          //url: "/api/game/role/heroList",
+          url: "/api/game/role/heroList",
+          where: {zoneId:1, roleId:11019}
           text: {
             none: '暂无相关数据',
           },
@@ -41,6 +42,9 @@
             { field: "level", title: "英雄等级" },
             { field: "star", title: "英雄星级" },
           ]],
+          data: [
+          {"id": 1, "name":"lk", "level":1, "star":1}
+          ]
           praseData: function (res) {
             for (i = 0; i < res.data.length; ++i) {
               res.data[i].id = res.data[i].iHeroId;
