--- a/front/pages/game/role_detail.html
+++ b/front/pages/game/role_detail.html
@@ -32,15 +32,15 @@
         let heroTable = table.render({
           elem: "#heroTable",
           url: "/api/game/role/heroList",
-          where: {zoneId:1, roleId:11019},
+          where: { zoneId: zoneid, roleId: roleid },
           text: {
             none: '暂无相关数据',
           },
           cols: [[
             { field: "id", title: "英雄ID" },
-            { field: "name", title: "英雄名称" },
-            { field: "level", title: "英雄等级" },
-            { field: "star", title: "英雄星级" },
+            { field: "name", title: "英雄名称", sort: true },
+            { field: "level", title: "英雄等级", sort: true },
+            { field: "star", title: "英雄星级", sort: true },
           ]],
           initSort: {
             field: 'id',
