--- a/front/pages/game/role_detail.html
+++ b/front/pages/game/role_detail.html
@@ -32,7 +32,7 @@
         let heroTable = table.render({
           elem: "#heroTable",
           url: "/api/game/role/heroList",
-          where: { zoneId: zoneid, roleId: roleid },
+          where: { zoneId: parent.zoneid, roleId: parent.roleid },
           text: {
             none: '暂无相关数据',
           },
