--- a/front/pages/gm/activity-edit.html
+++ b/front/pages/gm/activity-edit.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <title>编辑活动</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <link rel="stylesheet" href="../../css/oksub.css">
-  <script type="text/javascript" src="../../lib/loading/okLoading.js"></script>
+  <link rel="stylesheet" href="/css/oksub.css">
+  <script type="text/javascript" src="/lib/loading/okLoading.js"></script>
 </head>
 
 <body>
@@ -37,14 +37,14 @@
       <div class="layui-form-item">
         <label class="layui-form-label">配置数据</label>
         <div class="layui-input-block">
-          <textarea name="configure_data" class="layui-textarea"></textarea>
+          <textarea name="configure_data" class="layui-textarea" rows="18"></textarea>
         </div>
       </div>
 
       <div class="layui-form-item">
         <div class="layui-input-block">
           <button class="layui-btn" lay-submit lay-filter="edit">编辑配置</button>
-          <button class="layui-btn" lay-submit lay-filter="add">添加</button>
+          <button class="layui-btn" lay-submit lay-filter="add">保存</button>
           <button type="reset" class="layui-btn layui-btn-primary">重置</button>
         </div>
       </div>
