--- a/front/pages/gm/activity-add.html
+++ b/front/pages/gm/activity-add.html
@@ -20,6 +20,16 @@
       </div>
 
       <div class="layui-form-item">
+        <div class="layui-input-inline">
+          <input type="checkbox" title="覆盖" />
+          <label class="layui-text">活动类型</label>
+        </div>
+        <div class="layui-input-inline">
+          <input type="text" class="layui-input" lay-verify="required" lay-verType="tips">
+        </div>
+      </div>
+
+      <div class="layui-form-item">
         <label class="layui-form-label">应用分区</label>
         <div class="layui-input-block">
           <input type="text" name="apply_zone" autocomplete="off" class="layui-input" lay-verify="required"
@@ -44,13 +54,13 @@
       <div class="layui-form-item">
         <label class="layui-form-label">配置数据</label>
         <div class="layui-input-block">
-          <textarea name="config_data" class="layui-textarea" rows="18"></textarea>
+          <textarea name="configure_data" class="layui-textarea" rows="18"></textarea>
         </div>
       </div>
 
       <div class="layui-form-item">
         <div class="layui-input-block">
-          <button class="layui-btn" name="edit">编辑配置</button>
+          <button type="button" class="layui-btn" name="edit">编辑配置</button>
           <button class="layui-btn" lay-submit lay-filter="add">添加</button>
           <button type="reset" class="layui-btn layui-btn-primary">重置</button>
         </div>
@@ -59,12 +69,15 @@
     </form>
   </div>
   <script src="/lib/layui/layui.js"></script>
+  <script src="/js/activity.config.js"></script>
   <script>
-    layui.use(['form', 'okLayer', 'okUtils'], function () {
+    var config_data;
+    layui.use(['form', 'okLayer', 'okUtils', 'layer'], function () {
       let form = layui.form;
       let okUtils = layui.okUtils;
       let okLayer = layui.okLayer;
       let $ = layui.jquery;
+      let layer = layui.layer;
 
       //监听提交
       form.on('submit(add)', function (data) {
@@ -79,7 +92,8 @@
       });
 
       $('button[name="edit"]').click(function(e) {
-        console.log(e);
+        config_data = $("textarea[name='configure_data']").val();
+        okLayer.open("编辑配置", "/gm/json.html", "90%", "90%", null, null);
       });
     });
   </script>
