--- a/front/pages/gm/activity-edit.html
+++ b/front/pages/gm/activity-edit.html
@@ -51,7 +51,9 @@
     </form>
   </div>
   <script src="/lib/layui/layui.js"></script>
+  <script src="/js/activity.config.js"></script>
   <script>
+    var json_data;
     var config_data;
     layui.use(['form', 'okLayer', 'okUtils'], function () {
       let form = layui.form;
@@ -79,7 +81,8 @@
       });
 
       $('button[name="edit"]').click(function(e) {
-        config_data = "textarea[name='configure_data']";
+        json_data = "textarea[name='configure_data']";
+        config_data = activity.config.mainFieldOption;
         okLayer.open("编辑活动配置", "/gm/json.html", "90%", "90%", null, null);
       });
     });
